--- a/libs/ft_printf/Makefile
+++ b/libs/ft_printf/Makefile
@@ -1,4 +1,4 @@
-CC			=	cc
+CC			=	gcc
 CFLAGS		=	-Werror -Wextra -Wall
 AR			=	ar rcs
 NAME		=	libftprintf.a
@@ -16,16 +16,16 @@ OBJECTS		=	$(SOURCES:.c=.o)
 all					: $(NAME)
 
 $(NAME)				: $(HEADER) $(OBJECTS)
-	@$(AR) $(NAME) $(OBJECTS)
+	$(AR) $(NAME) $(OBJECTS)
 
 %.o					: %.c
-	@$(CC) $(CFLAGS) -o $@ -c $<
+	$(CC) $(CFLAGS) -o $@ -c $<
 
 clean 				:
-	@$(DEL) $(OBJECTS)
-	@$(DEL) $(BONUS_OBJ)
+	$(DEL) $(OBJECTS)
+	$(DEL) $(BONUS_OBJ)
 
 fclean				: clean
-	@$(DEL) $(NAME)
+	$(DEL) $(NAME)
 
 re					: fclean all
